--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.1.0
   json_serializable: ^6.7.1
   json_annotation: ^4.8.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
